[view] detailed Deed view on separate page not modal
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,8 @@
 @import "deeds";
 @import "sources";
 @import "storage";
+
+div.row-spacer {
+  margin-top: $spacer-y;
+  margin-bottom: $spacer-y;
+}
