--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -23,10 +23,12 @@
   </dl>
 <% end %>
 
-<div id="sources-table">
-  <div class="table" id="sources">
-    <div class="table-body container-fluid">
-      <%= render partial: 'source', collection: @sources %>
+<div class="row">
+  <div id="sources-table">
+    <div class="table" id="sources">
+      <div class="table-body container-fluid">
+        <%= render partial: 'source', collection: @sources %>
+      </div>
     </div>
   </div>
 </div>
