--- a/app/views/contents/show/_content.html.erb
+++ b/app/views/contents/show/_content.html.erb
@@ -15,7 +15,9 @@
 </div>
 <div class="row">
   <label class="col-md-3"><strong><%= Content.human_attribute_name :translations %></strong></label>
-  <div class="col-md-9" id="content-content-translations-accordion" role="tablist" aria-multiselectable="true">
-    <%= render partial: 'content_translations/show', collection: content.translations, as: :content_translation %>
-  </div>
+  <ul class="col-md-9" id="content-content-translations-accordion"
+       role="tablist" aria-multiselectable="true">
+    <%= render partial: 'contents/content_translations/inner_show', collection: content.translations,
+               as: :content_translation %>
+  </ul>
 </div>
