--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -87,10 +87,17 @@
   <div class="col-md-6">
     <div class="card">
       <div class="card-header">
-        <%= model_name_with_icon Content %> &mdash; <%= @deed.content.language.humanize %>
+        <%= model_name_with_icon Content %>
+        <% unless @deed.content.nil? %>
+          &mdash; <%= @deed.content.language.humanize %>
+        <% end %>
       </div>
       <div class="card-block">
-        <%= @deed.content.content %>
+        <% if @deed.content.nil? %>
+          <em class="text-muted">no Content</em>
+        <% else %>
+          <%= @deed.content.content %>
+        <% end %>
       </div>
     </div>
   </div>
