[control][spec][view] scaffold for Places
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,9 @@
 
 @import "archive";
 @import "contents";
+@import "content_translations";
 @import "deeds";
+@import "places";
 @import "sources";
 @import "storage";
 
