--- a/app/assets/stylesheets/_places.scss
+++ b/app/assets/stylesheets/_places.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Places controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.table {
+  .entity.row {
+    .col-info {
+      .col-place-title {
+        @include make-col(6);
+        @extend .p-x-0;
+      }
+    }
+  }
+}
