--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -42,4 +42,9 @@
       <%= model_name_with_icon Person, :plural %>
     <% end %>
   </li>
+  <li class="nav-item">
+    <%= link_to roles_path, class: "nav-link#{' active' if current_page?(controller: :roles)}" do %>
+      <%= model_name_with_icon Role, :plural %>
+    <% end %>
+  </li>
 </ul>
