[view][control] full-functional Mentions
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import "contents";
 @import "content_translations";
 @import "deeds";
+@import "mentions";
 @import "people";
 @import "places";
 @import "roles";
