--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -47,4 +47,9 @@
       <%= model_name_with_icon Role, :plural %>
     <% end %>
   </li>
+  <li class="nav-item">
+    <%= link_to mentions_path, class: "nav-link#{' active' if current_page?(controller: :mentions)}" do %>
+      <%= model_name_with_icon Mention, :plural %>
+    <% end %>
+  </li>
 </ul>
