--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -207,8 +207,13 @@
       <div class="card-header">
         <%= model_name_with_icon Person, :plural %>
       </div>
-      <div class="card-block">
-      </div>
+      <ul class="list-group list-group-flush">
+        <% if @deed.people.count > 0 %>
+          <%= render partial: 'deeds/show/person', collection: @deed.mentioned_people %>
+        <% else %>
+          <li class="list-group-item text-muted">no People mentioned</li>
+        <% end %>
+      </ul>
     </div>
   </div>
 
@@ -217,8 +222,13 @@
       <div class="card-header">
         <%= model_name_with_icon Place, :plural %>
       </div>
-      <div class="card-block">
-      </div>
+      <ul class="list-group list-group-flush">
+        <% if @deed.people.count > 0 %>
+          <%= render partial: 'deeds/show/place', collection: @deed.mentioned_places %>
+        <% else %>
+          <li class="list-group-item text-muted">no Places mentioned</li>
+        <% end %>
+      </ul>
     </div>
   </div>
 
@@ -227,8 +237,32 @@
       <div class="card-header">
         <%= model_name_with_icon Role, :plural %>
       </div>
-      <div class="card-block">
+      <ul class="list-group list-group-flush">
+        <% if @deed.people.count > 0 %>
+          <%= render partial: 'deeds/show/role', collection: @deed.mentioned_roles %>
+        <% else %>
+          <li class="list-group-item text-muted">no Roles mentioned</li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row-spacer"></div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <%= model_name_with_icon Mention, :plural %>
       </div>
+      <ul class="list-group list-group-flush">
+        <% if @deed.mentions.count > 0 %>
+          <%= render partial: 'deeds/show/mention', collection: @deed.mentions %>
+        <% else %>
+          <li class="list-group-item text-muted">no Mentions</li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
