--- a/app/views/deeds/show/_mention.html.erb
+++ b/app/views/deeds/show/_mention.html.erb
@@ -19,4 +19,8 @@
     <%= icon_for Place %>
     <%= mention.place.title %>
   <% end %>
+
+  <span class="pull-right">
+    <%= link_to_show_entity mention %>
+  </span>
 </li>
