--- a/app/views/deeds/show/_place.html.erb
+++ b/app/views/deeds/show/_place.html.erb
@@ -1,3 +1,6 @@
 <li class="list-group-item">
   <%= place.title %>
+  <span class="pull-right">
+    <%= link_to_show_entity place %>
+  </span>
 </li>
