--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -26,6 +26,37 @@
       </a>
     <% end %>
   </div>
+
+  <div class="btn-group btn-group-sm" role="group">
+    <%= link_to mentions_path(person_id: person.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show linked #{Mention.model_name.plural.humanize}",
+                data: { toggle: 'tooltip' } do %>
+      <%= person.mentions.count %>
+      <%= icon_for Mention %>
+    <% end %>
+    <%= link_to places_path(person_id: person.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show linked #{Place.model_name.plural.humanize}",
+                data: { toggle: 'tooltip' } do %>
+      <%= person.mentioned_places.length %>
+      <%= icon_for Place %>
+    <% end %>
+    <%= link_to roles_path(person_id: person.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show linked #{Role.model_name.plural.humanize}",
+                data: { toggle: 'tooltip' } do %>
+      <%= person.mentioned_roles.length %>
+      <%= icon_for Role %>
+    <% end %>
+    <%= link_to deeds_path(person_id: person.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show linked #{Deed.model_name.plural.humanize}",
+                data: { toggle: 'tooltip' } do %>
+      <%= person.mentioned_deeds.length %>
+      <%= icon_for Deed %>
+    <% end %>
+  </div>
 <% end %>
 
 <%= render partial: 'shared/index/entity',
