--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -1,280 +1,282 @@
-<div class="row">
-  <h1 class="col-md-12">
-    <%= icon_for Deed %>
-    <%= @deed.title %>
+<div id="deed-detail">
+  <div class="row">
+    <h1 class="col-md-12">
+      <%= icon_for Deed %>
+      <%= @deed.title %>
 
-    <span class="pull-right">
-      <%= link_to edit_deed_path(@deed),
-                  class: 'btn btn-outline-primary',
-                  id: "btn-deed-edit-#{@deed.id}",
-                  title: "Edit #{Deed.model_name.human}",
-                  data: { toggle: 'tooltip', placement: 'left' },
-                  remote: true do
-          content_tag(:i, nil, class: 'fa fa-fw fa-pencil')
-        end %>
-    </span>
-  </h1>
-</div>
+      <span class="pull-right">
+        <%= link_to edit_deed_path(@deed),
+                    class: 'btn btn-outline-primary',
+                    id: "btn-deed-edit-#{@deed.id}",
+                    title: "Edit #{Deed.model_name.human}",
+                    data: { toggle: 'tooltip', placement: 'left' },
+                    remote: true do
+            content_tag(:i, nil, class: 'fa fa-fw fa-pencil')
+          end %>
+      </span>
+    </h1>
+  </div>
 
-<div class="row">
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        Date
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          Date
+        </div>
+        <div class="card-block">
+          <div class="row">
+            <div class="col-md-3"><%= Deed.human_attribute_name :year %></div>
+            <div class="col-md-9">
+              <% if @deed.year %>
+                <%= @deed.year %>
+              <% else %>
+                <em class="text-muted">none given</em>
+              <% end %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3"><%= Deed.human_attribute_name :month %></div>
+            <div class="col-md-9">
+              <% if @deed.month %>
+                <%= @deed.month %>
+              <% else %>
+                <em class="text-muted">none given</em>
+              <% end %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3"><%= Deed.human_attribute_name :day %></div>
+            <div class="col-md-9">
+              <% if @deed.day %>
+                <%= @deed.day %>
+              <% else %>
+                <em class="text-muted">none given</em>
+              <% end %>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card-block">
-        <div class="row">
-          <div class="col-md-3"><%= Deed.human_attribute_name :year %></div>
-          <div class="col-md-9">
-            <% if @deed.year %>
-              <%= @deed.year %>
-            <% else %>
-              <em class="text-muted">none given</em>
-            <% end %>
-          </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= Deed.human_attribute_name :description %>
         </div>
-        <div class="row">
-          <div class="col-md-3"><%= Deed.human_attribute_name :month %></div>
-          <div class="col-md-9">
-            <% if @deed.month %>
-              <%= @deed.month %>
-            <% else %>
-              <em class="text-muted">none given</em>
-            <% end %>
-          </div>
+        <div class="card-block">
+          <%= @deed.description %>
         </div>
-        <div class="row">
-          <div class="col-md-3"><%= Deed.human_attribute_name :day %></div>
-          <div class="col-md-9">
-            <% if @deed.day %>
-              <%= @deed.day %>
-            <% else %>
-              <em class="text-muted">none given</em>
-            <% end %>
-          </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= notes_icon %>
+          <%= Deed.human_attribute_name :notes %>
+        </div>
+        <div class="card-block">
+          <%= @deed.notes %>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= Deed.human_attribute_name :description %>
-      </div>
-      <div class="card-block">
-        <%= @deed.description %>
+  <div class="row-spacer"></div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Content %>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <% if @deed.content.nil? %>
+              <em class="text-muted">no Content</em>
+            <% else %>
+              <%= @deed.content.language.humanize %>
+              <span class="pull-right">
+                <%= link_to_show_entity @deed.content %>
+              </span>
+            <% end %>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
 
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= notes_icon %>
-        <%= Deed.human_attribute_name :notes %>
-      </div>
-      <div class="card-block">
-        <%= @deed.notes %>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row-spacer"></div>
-
-<div class="row">
-  <div class="col-md-6">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Content %>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          <% if @deed.content.nil? %>
-            <em class="text-muted">no Content</em>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon ContentTranslation, :plural %>
+          <span class="pull-right">
+            <%=  link_to nil,#new_content_translation_path
+                 class: 'btn btn-sm btn-primary',
+                 id: 'btn-new-content-translation',
+                 title: "Add new #{ContentTranslation.model_name.human}",
+                 data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
+                 remote: true do -%>
+              <%= icon('plus', class: 'fa-fw') %>
+            <% end -%>
+          </span>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.translations.count > 0 %>
+            <%= render partial: 'deeds/show/translation', collection: @deed.translations %>
           <% else %>
-            <%= @deed.content.language.humanize %>
-            <span class="pull-right">
-              <%= link_to_show_entity @deed.content %>
-            </span>
+            <li class="list-group-item text-muted">no Translations</li>
           <% end %>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon ContentTranslation, :plural %>
-        <span class="pull-right">
-          <%=  link_to nil,#new_content_translation_path
-               class: 'btn btn-sm btn-primary',
-               id: 'btn-new-content-translation',
-               title: "Add new #{ContentTranslation.model_name.human}",
-               data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
-               remote: true do -%>
-            <%= icon('plus', class: 'fa-fw') %>
-          <% end -%>
-        </span>
-      </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.translations.count > 0 %>
-          <%= render partial: 'deeds/show/translation', collection: @deed.translations %>
-        <% else %>
-          <li class="list-group-item text-muted">no Translations</li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="row-spacer"></div>
-
-<div class="row">
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Source, :plural %>
-        <span class="pull-right">
-          <%=  link_to new_source_path(deed_id: @deed.id),
-                       class: 'btn btn-sm btn-primary',
-                       id: 'btn-new-source',
-                       title: "Add new #{Source.model_name.human}",
-                       data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
-                       remote: true do -%>
-            <%= icon('plus', class: 'fa-fw') %>
-          <% end -%>
-        </span>
-      </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.sources.count > 0 %>
-          <%= render partial: 'deeds/show/source', collection: @deed.sources %>
-        <% else %>
-          <li class="list-group-item text-muted">no Sources</li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= icon('external-link', class: 'fa-fw') %>
-        References
-        <span class="pull-right">
-          <%=  link_to nil,#new_reference_path(deed_id: @deed.id),
-                       class: 'btn btn-sm btn-primary',
-                       id: 'btn-new-source',
-                       title: 'Add new Reference',
-                       data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
-                       remote: true do -%>
-            <%= icon('plus', class: 'fa-fw') %>
-          <% end -%>
-        </span>
-      </div>
-      <div class="card-block">
+        </ul>
       </div>
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= icon('bookmark-o', class: 'fa-fw') %>
-        Seals
-        <span class="pull-right">
-          <%=  link_to nil,#new_seal_path(deed_id: @deed.id),
-                       class: 'btn btn-sm btn-primary',
-                       id: 'btn-new-source',
-                       title: 'Add new Seal',
-                       data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
-                       remote: true do -%>
-            <%= icon('plus', class: 'fa-fw') %>
-          <% end -%>
-        </span>
+  <div class="row-spacer"></div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Source, :plural %>
+          <span class="pull-right">
+            <%=  link_to new_source_path(deed_id: @deed.id),
+                         class: 'btn btn-sm btn-primary',
+                         id: 'btn-new-source',
+                         title: "Add new #{Source.model_name.human}",
+                         data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
+                         remote: true do -%>
+              <%= icon('plus', class: 'fa-fw') %>
+            <% end -%>
+          </span>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.sources.count > 0 %>
+            <%= render partial: 'deeds/show/source', collection: @deed.sources %>
+          <% else %>
+            <li class="list-group-item text-muted">no Sources</li>
+          <% end %>
+        </ul>
       </div>
-      <div class="card-block">
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= icon('external-link', class: 'fa-fw') %>
+          References
+          <span class="pull-right">
+            <%=  link_to nil,#new_reference_path(deed_id: @deed.id),
+                         class: 'btn btn-sm btn-primary',
+                         id: 'btn-new-source',
+                         title: 'Add new Reference',
+                         data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
+                         remote: true do -%>
+              <%= icon('plus', class: 'fa-fw') %>
+            <% end -%>
+          </span>
+        </div>
+        <div class="card-block">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= icon('bookmark-o', class: 'fa-fw') %>
+          Seals
+          <span class="pull-right">
+            <%=  link_to nil,#new_seal_path(deed_id: @deed.id),
+                         class: 'btn btn-sm btn-primary',
+                         id: 'btn-new-source',
+                         title: 'Add new Seal',
+                         data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
+                         remote: true do -%>
+              <%= icon('plus', class: 'fa-fw') %>
+            <% end -%>
+          </span>
+        </div>
+        <div class="card-block">
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="row-spacer"></div>
+  <div class="row-spacer"></div>
 
-<div class="row">
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Person, :plural %>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Person, :plural %>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.people.count > 0 %>
+            <%= render partial: 'deeds/show/person', collection: @deed.mentioned_people %>
+          <% else %>
+            <li class="list-group-item text-muted">no People mentioned</li>
+          <% end %>
+        </ul>
       </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.people.count > 0 %>
-          <%= render partial: 'deeds/show/person', collection: @deed.mentioned_people %>
-        <% else %>
-          <li class="list-group-item text-muted">no People mentioned</li>
-        <% end %>
-      </ul>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Place, :plural %>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.people.count > 0 %>
+            <%= render partial: 'deeds/show/place', collection: @deed.mentioned_places %>
+          <% else %>
+            <li class="list-group-item text-muted">no Places mentioned</li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Role, :plural %>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.people.count > 0 %>
+            <%= render partial: 'deeds/show/role', collection: @deed.mentioned_roles %>
+          <% else %>
+            <li class="list-group-item text-muted">no Roles mentioned</li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Place, :plural %>
-      </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.people.count > 0 %>
-          <%= render partial: 'deeds/show/place', collection: @deed.mentioned_places %>
-        <% else %>
-          <li class="list-group-item text-muted">no Places mentioned</li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
+  <div class="row-spacer"></div>
 
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Role, :plural %>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="card">
+        <div class="card-header">
+          <%= model_name_with_icon Mention, :plural %>
+          <span class="pull-right">
+            <%=  link_to new_mention_path(deed_id: @deed.id),
+                         class: 'btn btn-sm btn-primary',
+                         id: 'btn-new-source',
+                         title: 'Add new Mention',
+                         data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
+                         remote: true do -%>
+              <%= icon('plus', class: 'fa-fw') %>
+            <% end -%>
+          </span>
+        </div>
+        <ul class="list-group list-group-flush">
+          <% if @deed.mentions.count > 0 %>
+            <%= render partial: 'deeds/show/mention', collection: @deed.mentions %>
+          <% else %>
+            <li class="list-group-item text-muted">no Mentions</li>
+          <% end %>
+        </ul>
       </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.people.count > 0 %>
-          <%= render partial: 'deeds/show/role', collection: @deed.mentioned_roles %>
-        <% else %>
-          <li class="list-group-item text-muted">no Roles mentioned</li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="row-spacer"></div>
-
-<div class="row">
-  <div class="col-md-8 offset-md-2">
-    <div class="card">
-      <div class="card-header">
-        <%= model_name_with_icon Mention, :plural %>
-        <span class="pull-right">
-          <%=  link_to new_mention_path(deed_id: @deed.id),
-                       class: 'btn btn-sm btn-primary',
-                       id: 'btn-new-source',
-                       title: 'Add new Mention',
-                       data: { toggle: 'tooltip', 'turbolinks': false, placement: 'left' },
-                       remote: true do -%>
-            <%= icon('plus', class: 'fa-fw') %>
-          <% end -%>
-        </span>
-      </div>
-      <ul class="list-group list-group-flush">
-        <% if @deed.mentions.count > 0 %>
-          <%= render partial: 'deeds/show/mention', collection: @deed.mentions %>
-        <% else %>
-          <li class="list-group-item text-muted">no Mentions</li>
-        <% end %>
-      </ul>
     </div>
   </div>
 </div>
