[view][model] esier stringify for some models
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/deeds/show/_person.html.erb
+++ b/app/views/deeds/show/_person.html.erb
@@ -1,9 +1,5 @@
 <li class="list-group-item">
-  <% if person.gender == 'unknown' %>
-    <%= icon('question', class: 'fa-fw') %>
-  <% else %>
-    <%= icon(person.gender, class: 'fa-fw') %>
-  <% end %>
+  <%= icon(person.gender_icon, class: 'fa-fw') %>
   <%= person.name %>
   <span class="pull-right">
     <%= link_to_show_entity person %>
