--- a/app/views/people/show/_content.html.erb
+++ b/app/views/people/show/_content.html.erb
@@ -10,11 +10,7 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Person.human_attribute_name :gender %></strong></label>
   <div class="col-md-9">
-    <% if person.gender == 'unknown' %>
-      <%= icon('question', class: 'fa-fw') %>
-    <% else %>
-      <%= icon(person.gender, class: 'fa-fw') %>
-    <% end %>
+    <%= icon(person.gender_icon, class: 'fa-fw') %>
     <%= person.gender.humanize %>
   </div>
 </div>
