[view] nicer selection boxes
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/contents/form/_own_fields.html.erb
+++ b/app/views/contents/form/_own_fields.html.erb
@@ -6,7 +6,7 @@
                    options_for_select(Content::LANGUAGES.map { |e| e.humanize },
                                       (@content.language ? @content.language.humanize : nil)),
                    {},
-                   { class: 'form-control' } %>
+                   { class: 'custom-select' } %>
     </div>
   </div>
   <div class="row form-group">
