--- a/app/views/contents/content_translations/_form.html.erb
+++ b/app/views/contents/content_translations/_form.html.erb
@@ -25,7 +25,7 @@
           <%= t_f.select :language,
                          options_for_select(Content::LANGUAGES.map { |e| e.humanize }),
                          {},
-                         { class: 'form-control' } %>
+                         { class: 'custom-select' } %>
         </div>
       </div>
       <div class="row form-group">
